# Lawyer-AI-studio

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package.json  pyproject.toml
.claude/: mcp.example.json  settings.local.json.example
.claude/agents/: DocAnalyzer.md  EvidenceAnalyzer.md  IssueIdentifier.md  Reporter.md  Researcher.md  Reviewer.md  Scheduler.md  Strategist.md  Summarizer.md  Writer.md
.claude/commands/: evidence-review.md  new-case.md  update-paths.md
.claude/config/: PATH_MANAGEMENT.md  paths.yaml
.claude/mcp/: DOCUMENT_PROCESSING_FALLBACK.md  MCP_IMPLEMENTATION_GUIDE.md  MCP_TOOLS_CONFIGURATION_FIX.md  MCP_TRIGGER_PATTERNS.md  RESPONSIVE_AGENT_MECHANISM.md  fallback.json
.claude/mcp/mineru/: OFFICIAL_DOCUMENTATION.md  README.md
.claude/mcp/pkulaw/: README.md  all_pages.json  all_pages.md  pkulaw_apis_details.json  pkulaw_apis_details.md
.claude/rules/: AgentMapping.md  OutputStandards.md  PDFProcessingRules.md  RulesMeta.md  SubagentStandards.md  TimeRules.md  WorkflowScenarios.md  WorkflowSystem.md
.claude/tools/: pdf_processor.md  update_paths.py
.github/workflows/: release.yml
.superpowers/brainstorm/29080-1774712424/content/: architecture.html  case-workspace.html  settings-and-onboarding.html  workflow-editor-v2.html  workflow-editor.html
.superpowers/brainstorm/29080-1774712424/state/: server-info
apps/api/: requirements.txt  run.py  suitagent-api.spec
apps/api/.runtime/data/: cases.json  timelines.json  workspace.sqlite3
apps/api/app/: __init__.py  document_processor.py  executor.py  main.py  models.py  services.py  store.py  workflow_engine.py  workflow_routes.py
apps/api/tests/: test_app.py  test_workflows.py
apps/api/tests/fixtures/: mock_executor.py
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/web/: package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/cases/[id]/: page.tsx
apps/web/src/app/settings/: page.tsx
apps/web/src/app/workflows/: page.tsx
apps/web/src/components/: case-dashboard.tsx  case-workspace.tsx  nav-bar.tsx  onboarding.tsx  workflow-editor.tsx
apps/web/src/lib/: api.ts  types.ts
docs/: DECISIONS.md  USER_MANUAL.md
docs/product/: MVP-任务清单.md  PRD-半自动案件工作台.md  开发计划-半自动案件工作台.md
docs/superpowers/plans/: 2026-03-29-desktop-client.md
docs/superpowers/specs/: 2026-03-29-desktop-client-design.md
scripts/: build-api.sh
status/: CHANGELOG.md  JOURNAL.md
workflows/preset/: commission-documents.json  defendant-response.json  evidence-review.json  legal-service-plan.json  plaintiff-lawsuit.json  post-trial-analysis.json  strategy-optimization.json
