[project]
name = "suitagent"
version = "1.0.0"
description = "SuitAgent 法律智能分析系统"
requires-python = ">=3.9"

# ===========================================
# 核心文档处理依赖 (初次使用必需)
# ===========================================
dependencies = [
    # PDF处理相关
    "pypdf>=3.17.0",              # PDF读写、合并、分割
    "pdfplumber>=0.10.0",         # PDF文本提取
    "reportlab>=4.0.0",           # PDF生成
    "pdf2image>=1.17.0",          # PDF转图片

    # OCR识别相关
    "pytesseract>=0.3.10",        # Python wrapper for Tesseract OCR

    # 文档处理相关
    "python-docx>=1.1.0",         # Word文档 (.docx)
    "python-pptx>=0.6.21",        # PowerPoint文档 (.pptx)
    "openpyxl>=3.1.2",            # Excel文档 (.xlsx)

    # 图像处理相关
    "Pillow>=10.0.0",             # 图像处理库

    # XML/HTML处理相关
    "defusedxml>=0.7.1",          # 安全XML解析
    "lxml>=4.9.0",                # XML/HTML处理器

    # 文档格式转换
    "markdown>=3.5.0",            # Markdown处理
    "html2text>=2020.1.16",       # HTML转纯文本
    "markitdown>=0.2.0",          # 文档转Markdown (支持DOCX/PPTX等)

    # 配置文件处理
    "PyYAML>=6.0.0",              # YAML文件处理
]

[project.optional-dependencies]
# ===========================================
# 开发测试相关依赖 (可选)
# ===========================================
dev = [
    "pytest>=7.4.0",              # 测试框架
    "pytest-cov>=4.1.0",          # 测试覆盖率
    "black>=23.0.0",               # 代码格式化
    "flake8>=6.0.0",               # 代码检查
    "mypy>=1.5.0",                 # 类型检查
    "pre-commit>=3.3.0",           # 预提交钩子
]

# ===========================================
# 系统依赖配置 (可选)
# ===========================================
[tool.pixi.environments]
[tool.pixi.environments.default]
platforms = ["osx-arm64", "linux-64", "win-64"]

[tool.pixi.environments.default.system-requirements]
# 系统依赖 (需单独安装)
# OCR文字识别
libtesseract = ">=5.0.0"

# PDF处理工具
poppler = ">=23.0.0"

# 文档转换工具
pandoc = ">=3.0.0"

# Office文档处理
libreoffice = ">=7.0.0"

# 图像处理库
libjpeg = ">=9.0"
libpng = ">=1.6.0"
zlib = ">=1.2.0"

[project.urls]
Homepage = "https://github.com/suitagent/suitagent"
Documentation = "https://suitagent.readthedocs.io"
Repository = "https://github.com/suitagent/suitagent"
"Bug Tracker" = "https://github.com/suitagent/suitagent/issues"

[project.scripts]
# 可执行脚本入口点 (如需要)
# suitagent = "suitagent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pytesseract",
    "pdf2image",
    "PIL",
]
ignore_missing_imports = true